Fix GIS Data Importer for real NLS sample data; update testing plan
- Main.java: add ZIP file support for GML input (--input and --input-dir)
- WorldFileParser: relax bounds to accommodate NLS overview raster extents
  that legitimately start outside Finland's operational coordinate bounds
- WorldFileParserTest: update bounds-rejection test to use value outside
  the relaxed range
- Internationalization NFR: clarify that operational coordinate bounds do
  not apply to raster source file georeferencing (world files)
- Testing plan: update to reflect real sample data (maastokartta +
  taustakartta tile layers, ZIP GML files, 2026 municipalities), replace
  hand-crafted SQL seed with GIS Data Importer, drop one task (8 tasks total)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>